# udaddy

./: .gitignore  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
platform_backend/: .env  Cargo.toml
platform_backend/.cargo/: config.toml
platform_backend/api/: Cargo.toml
platform_backend/api/src/: main.rs  middleware.rs  routes.rs  state.rs  view_models.rs  ws.rs
platform_backend/api/src/handlers/: agents.rs  assets.rs  mod.rs  orchestrator.rs  pipelines.rs  runs.rs
platform_backend/core/: Cargo.toml
platform_backend/core/src/: config.rs  error.rs  lib.rs  security.rs
platform_backend/core/src/ai/: mod.rs  planner.rs  tagging.rs
platform_backend/core/src/db/: crud.rs  mod.rs  models.rs
platform_backend/core/src/wasm/: executor.rs
platform_backend/migrations/: 20250711000000_initial_schema.sql  20250711100000_add_pipelines_and_runs.sql
platform_backend/worker/: Cargo.toml
platform_backend/worker/src/: consumer.rs  main.rs  processor.rs
server/: build.gradle.kts
shared/: build.gradle.kts
udaddy.old/: README.md  gradle.properties  settings.gradle.kts
udaddy.old/backend/worker/: Cargo.toml
udaddy.old/composeApp/: build.gradle.kts
udaddy.old/iosApp/Configuration/: Config.xcconfig
udaddy.old/shared/: build.gradle.kts
udaddy.old/temp/: .env  Dockerfile  README.md  alembic.ini  dashboard.xml  docker-compose.yml  rename.md  requirements.txt
udaddy.old/temp/alembic/: env.py
udaddy.old/temp/app/: __init__.py  initial_data.py  main.py
udaddy.old/temp/app/api/: deps.py
udaddy.old/temp/app/core/: config.py  security.py
udaddy.old/temp/app/crud/: base.py  crud_agent.py  crud_dag_template.py  crud_task_instance.py  (+2 more)
(+50 files in other folders)
