[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web and Async
tokio = { version = "1", features = ["full"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
# Config
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
# Security
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
jwt = "0.16"
# WASM
wasmtime = "18.0"
wasi-common = "18.0"
# Error Handling
thiserror = "1.0"
# Others
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
